added body for website

--- a/index.html
+++ b/index.html
@@ -4,5 +4,31 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale-1, shrink-to-fit=no">
-    <title>WICS</title>
+    <title>WICS Hackathon Project: MindLift</title>
   </head>
+
+    <body>
+        <h1>MindLift</h1>
+        <h2>By Team 6</h2>
+        <h3>Grace, Hannah, and Sophia</h3>
+        <p>MindLift is a mental health app that uses cognitive behavioral therapy (CBT) techniques to help users manage their mental health. The app provides users with a variety of tools and resources to help them identify and challenge negative thought patterns, develop coping skills, and improve their overall well-being.</p>
+        <h3>Features</h3>
+        <ul>
+        <li>Mood tracking: Users can track their mood over time and identify patterns in their emotional state.</li>
+        <li>Thought journaling: Users can record their thoughts and feelings in a private journal.</li>
+        <li>CBT exercises: The app provides users with a variety of CBT exercises to help them challenge negative thought patterns and develop coping skills.</li>
+        <li>Resource library: The app includes a library of articles, videos, and other resources on mental health topics.</li>
+        <li>Community support: Users can connect with others who are also using the app and share their experiences.</li>
+        </ul>
+        <h3>Technologies Used</h3>
+        <ul>
+        <li>Frontend: React Native for cross-platform mobile development.</li>
+        <li>Backend: Node.js with Express for server-side logic and API development.</li>
+        <li>Database: MongoDB for storing user data, mood logs, and journal entries.</li>
+        <li>Authentication: Firebase Authentication for secure user login and registration.</li>
+        <li>Hosting: Heroku for deploying the backend server and MongoDB Atlas for database hosting.</li>
+        </ul>
+        <h3>Getting Started</h3>
+        <p>To get started with MindLift, download the app from the App Store or Google Play Store. Create an account and start exploring the features!</p>
+        <h3>Contact Us</h3>
+        <p>If you have any questions or feedback, please contact us at
