--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
+<!DOCTYPE HTML>
+<html lang="en">
+  
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale-1, shrink-to-fit=no">
+    <title>WICS Hackathon Project: MindLift</title>
+</head>
 
+<body>
+    <h1>MindLift</h1>
+    <h2>By Team Positive</h2>
+    <p>MindLift is a mental health app that uses cognitive behavioral therapy (CBT) techniques to help users manage their mental health. The app provides users with a variety of tools and resources to help them identify and challenge negative thought patterns, develop coping skills, and improve their overall well-being.</p>
+    <h3>Features</h3>
+    <ul>
+    <li>Mood tracking: Users can track their mood over time and identify patterns in their emotional state.</li>
+    <li>Thought journaling: Users can record their thoughts and feelings in a private journal.</li>
+    <li>CBT exercises: The app provides users with a variety of CBT exercises to help them challenge negative thought patterns and develop coping skills.</li>
+    <li>Resource library: The app includes a library of articles, videos, and other resources on mental health topics.</li>
+    <li>Community support: Users can connect with others who are also using the app and share their experiences.</li>
+    </ul>
+    <a href="quote.html">Feeling unmotivated? Click here for a boost!</a>
+    <a href="journaling.html">Have a thought? Click here to journal!</a>
+    <h3>Contact Us</h3>
+    <p>If you have any questions or feedback, please contact us at <a href="mailto:support@mindlift.com">support@mindlift.com</a>.</p>
+</body>
