--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>MindLift</h1>
-    <h2>By Team Positive</h2>
+    <h2>By Team MindLift</h2>
     <p>MindLift is a mental health app that uses cognitive behavioral therapy (CBT) techniques to help users manage their mental health. The app provides users with a variety of tools and resources to help them identify and challenge negative thought patterns, develop coping skills, and improve their overall well-being.</p>
     <h3>Features</h3>
     <ul>
