--- a/quote.html
+++ b/quote.html
@@ -33,6 +33,7 @@
 
     <!-- Button to Get New Quote -->
     <button id="new-quote">Show New Quote</button>
+    <a href="index.html">Go back to home</a>
 
 
   </main>
