--- a/quote.html
+++ b/quote.html
@@ -33,7 +33,7 @@
 
     <!-- Button to Get New Quote -->
     <button id="new-quote">Show New Quote</button>
-    <a href="index.html">Go back to home</a>
+    <button id="index.html">Go back to home</botton>
 
 
   </main>
