--- a/quote.html
+++ b/quote.html
@@ -6,6 +6,58 @@
   <title>MindLift - Motivation</title>
   <link rel="stylesheet" href="style.css">
   <script src = "script.js" defer></script>
+      <style>
+        /* In an internal style block */
+        .large-input {
+            width: 100%; /* Set a specific width */
+            height: 50px; /* Set a specific height */
+            font-size: 18px; /* Optionally increase font size for better readability */
+        }
+
+        .center-text {
+            text-align: center;
+        }
+
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #d4f6eb;
+            color: #333;
+            line-height: 1.6;
+            padding: 20px;
+        }
+
+        h1 {
+            font-family: 'Arial', sans-serif;
+            text-align: center;
+            color: #1e291e; /* Optional: Change title color */
+            font-size: 2.5em; /* Optional: Adjust font size */
+            margin-top: 20px;
+        }
+
+        h2 {
+            font-family: 'Arial', sans-serif;
+            background-color: #d4f6eb;
+            color: #333;
+            line-height: 1.6;
+            padding: 20px;
+        }
+
+        /* Center the image */
+        .center-img {
+            display: block;
+            margin: 20px auto;
+            max-width: 100%;
+            height: auto;
+        }
+
+        /* Center the link */
+        .center-link {
+            text-align: center;
+            display: block;
+            margin: 20px auto;
+        }
+    </style>
+
 </head>
 <body>
   <header>
