--- a/quote.html
+++ b/quote.html
@@ -64,8 +64,8 @@
     <h1>🌿 MindLift</h1>
     <a class="center-link" href="index.html">Home</a>
 
-    
-    <p>Find motivation, anytime.</p>
+    <p </p>
+    <p class="center-link">Find motivation, anytime.</p>
   </header>
 
 
