--- a/quote.html
+++ b/quote.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MindLift - Motivation</title>
   <link rel="stylesheet" href="style.css">
-  <script src = "script.js" defer></script>
+  <script src = "quotes.js" defer></script>
       <style>
         /* In an internal style block */
         .large-input {
@@ -89,7 +89,10 @@
     </div>
 
     <!-- Button to Get New Quote -->
-    <button id="new-quote">Show New Quote</button>
+    <!-- <button id="new-quote">Show New Quote</button> -->
+  <script type="text/javascript" src="quotes.js"></script>
+  <!-- <button id="new-quote" onclick="displayQuote(data-feeling)">Show New Quote</button> -->
+  <input id="new-quote" type="button" value="Show New Quote" onclick="displayQuote('anxious')">
 
 
   </main>
