--- a/quote.html
+++ b/quote.html
@@ -92,7 +92,7 @@
     <!-- <button id="new-quote">Show New Quote</button> -->
   <script type="text/javascript" src="quotes.js"></script>
   <!-- <button id="new-quote" onclick="displayQuote(data-feeling)">Show New Quote</button> -->
-  <input id="new-quote" type="button" value="Show New Quote" onclick="displayQuote('anxious')">
+  <input id="new-quote" type="button" value="Show New Quote" onclick="displayQuote(data-feeling)">
 
 
   </main>
@@ -104,6 +104,6 @@
   </footer>
 
   <!-- Connect JS File -->
-  <script src="script.js"></script>
+  <!-- <script src="script.js"></script> -->
 </body>
 </html>
