--- a/journaling.html
+++ b/journaling.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="style.css">
     <style>
         /* In an internal style block */
         .large-input {
